Fix the small gap.

--- a/src/documents/themes/drupalaton/sass/_drupalaton.scss
+++ b/src/documents/themes/drupalaton/sass/_drupalaton.scss
@@ -182,7 +182,7 @@ p {
 
   section {
     padding-top: 4.5em;
-    margin-top: -4.5em;
+    margin-top: -3.5em;
   }
 
   h2.section-title{
